--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 Flask==2.2.3
-gunicorn==20.1.0
+gunicorn==23.0.0
 requests==2.28.2
 beautifulsoup4==4.11.1
 openai==0.27.0
 werkzeug==2.2.3
+packaging==24.2
+python-dotenv==1.0.0
