--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 FLASK_APP=app.py
 FLASK_DEBUG=1
+OPENAI_API_KEY=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
