--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,4 @@ beautifulsoup4==4.11.1
 openai==0.27.0
 werkzeug==2.2.3
 packaging==24.2
-python-dotenv==1.0.0
+python-dotenv==1.0.0  # For loading environment variables from .env (if used)
