--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,7 @@
-python-dotenv==1.0.0  # For loading environment variables from .env
-annotated-types==0.7.0
-anyio==4.6.2.post1
-beautifulsoup4==4.11.1
-certifi==2024.8.30
-charset-normalizer==3.4.0
-click==8.1.7
-colorama==0.4.6
-distro==1.9.0
-Flask==2.2.3
-Flask-Cors==5.0.0
-gunicorn==23.0.0
-h11==0.14.0
-httpcore==1.0.7
-httpx==0.28.0
-idna==3.10
-itsdangerous==2.2.0
-Jinja2==3.1.4
-jiter==0.8.0
-MarkupSafe==3.0.2
-openai==1.56.1
-packaging==24.2
-pydantic==2.10.3
-pydantic_core==2.27.1
-requests==2.28.2
-sniffio==1.3.1
-soupsieve==2.6
-tqdm==4.67.1
-typing_extensions==4.12.2
-urllib3==1.26.20
-Werkzeug==3.1.3
+Flask==2.3.2
+requests==2.31.0
+beautifulsoup4==4.12.2
+openai==0.27.8
+numpy==1.26.0
+scikit-learn==1.3.2
+gunicorn==21.2.0
