--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 Flask==2.3.2
+Werkzeug==2.3.7
 requests==2.31.0
 beautifulsoup4==4.12.2
 openai==0.27.8
 numpy==1.26.0
 scikit-learn==1.3.2
-gunicorn==21.2.0
+waitress==2.1.2
